tests/baselines/reference/recursiveInference1(strict=true).errors.txt
recursiveInference1.ts(1,10): error TS7023: 'fib' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.


==== recursiveInference1.ts (1 errors) ====
    function fib(x:number) { return x <= 1 ? x : fib(x - 1) + fib(x - 2); }
             ~~~
!!! error TS7023: 'fib' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
    var result = fib(5);